# Smart_Attendance_portal_with_supabase

./: .gitignore  README.md  main.py  pyproject.toml  student_main.py
Attendence/: admin.py  attendance.py  student.py  utils.py
records/: attendance_matrix_newclass_20260410.csv
