[project]
name = "smart-attendance-portal-with-supabase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel==7.1.0",
    "matplotlib==3.10.7",
    "pandas==2.3.3",
    "pygithub==2.8.1",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "requests==2.32.5",
    "streamlit==1.51.0",
    "supabase==2.24.0",
    "typing-extensions==4.15.0",
]
